# meta

./: .gitignore  .gitmodules  flake.nix
entangler/: Cargo.toml  README.md  justfile
entangler/common/: Cargo.toml
entangler/common/examples/: native.rs
entangler/common/src/: event.rs  lib.rs
entangler/entangler-common/: Cargo.toml  build.rs
entangler/entangler-common/src/: app.rs  controller.rs  lib.rs  ui.rs
entangler/entangler-common/src/ui/: event.rs  state.rs
entangler/entangler-common/ui/: common.slint  main.slint  page.slint  radar_page.slint  settings_page.slint
entangler/entangler-common/ui/page/: radar.slint  settings.slint
entangler/entangler-simulation/: Cargo.toml
entangler/entangler-simulation/src/: controller.rs  lib.rs  main.rs  slint_backend.rs
entangler/entangler-simulation/src/mcu/: mod.rs
entangler/entangler-simulation/src/simulator/: hardware.rs
entangler/entangler-waveshare/: Cargo.toml  README.md
entangler/entangler-waveshare-esp32s3/: Cargo.toml
entangler/entangler-waveshare-esp32s3/src/: display.rs  lib.rs  ui.rs
entangler/entangler-waveshare-esp32s3/src/display/: model.rs
entangler/hardware/: .gitignore  BCS.kicad_sch  entangler.kicad_pcb  entangler.kicad_prl  entangler.kicad_pro  entangler.kicad_sch  fp-lib-table  mcu.kicad_sch  power.kicad_sch  sym-lib-table  usb-c.kicad_sch
entangler/nmea-stream/: Cargo.toml  README.md
entangler/nmea-stream/src/: lib.rs
filter/: Cargo.toml
filter/src/: lib.rs  main.rs
filter/src/kalman/: lkf.rs  mod.rs
filter/tests/: integration_test.rs
qcp/: Cargo.toml  build.rs
qcp/proto/: packets.proto
qcp/src/: error.rs  lib.rs  packet.proto  packet.rs
qcp/src/header/: mod.rs  version.rs
qcp/src/message/: id_01_heartbeat.rs  id_02_request.rs  id_03_gnss.rs  mod.rs
qcp/tests/: packet_tests.rs
warp/: Cargo.toml  memory.x  rust-toolchain.toml
warp/hardware/: Entangler.kicad_pcb  Entangler.kicad_prl  Entangler.kicad_pro  Entangler.kicad_sch  Entangler.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
warp/hardware/Entangler.pretty/: CONN_YO0221500000G_AMP.kicad_mod  CUI_CBT-09427-SMT.kicad_mod  DO-214BA_MCH-L.kicad_mod  DO-214BA_MCH-M.kicad_mod  DO-214BA_MCH.kicad_mod  GCT_MEM2061-01-188-00-A_REVA.kicad_mod  PQFN50P250X300X86-14N.kicad_mod  SOIC127P600X175-8N.kicad_mod  SSOT3_3X1P5_ONS-L.kicad_mod  SSOT3_3X1P5_ONS-M.kicad_mod  SSOT3_3X1P5_ONS.kicad_mod  SW_TL3365AF180QG.kicad_mod  XCVR_L86-M33.kicad_mod  XTAL_ECS-120-20-33-AEL-TR.kicad_mod
warp/src/: main.rs  resources.rs
warp/src/system/: indicator.rs  interface.rs  mod.rs  state_machine.rs
warp/src/system/interface/: acm.rs  mod.rs  mod.rs.bak  ncm.rs
wio-l1/: Cargo.toml  Embed.toml  README.md  build.rs  cargo-uf2  memory.x  uf2.sh
wio-l1/.cargo/: config.toml
wio-l1/src/: main.rs  task.rs
wio-l1/src/task/: blink.rs
