[package]
name = "filter"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
nalgebra = { version = "0.34.1" }
kiss3d = { version = "0.37.2", features = ["egui"] }
rand = "0.9.2"
rand_distr = "0.5.1"

[features]
default = ["std"]
std = []
libm = []

[[bin]]
name = "sim"
path = "src/bin/simulate.rs"
