[package]
name = "qcp"
version = "0.1.0"
edition = "2024"

[dependencies]
cobs = { version = "0.3.0", default-features = false, features = ["alloc"] }
heapless = "0.7.17"
serde = { version = "1.0.219", default-features = false }
defmt = "1.0.1"
prost = { version = "0.14.1", default-features = false, features = ["derive"] }

[build-dependencies]
glob = "0.3.3"
prost-build = "0.14.1"

[features]
std = []
