[package]
name = "warp"
edition = "2024"
version = "0.0.1"
authors = ["Quanta Rocketry"]
description = "A flight computer for recovery deployment"

[dependencies]
embassy-executor = { version = "0.7.0", features = [
	"arch-cortex-m",
	"executor-thread",
	"defmt",
	"task-arena-size-131072",
] }
embassy-rp = { version = "0.6.0", features = [
	"defmt",
	"unstable-pac",
	"time-driver",
	"critical-section-impl",
	"rp235xa",
	"binary-info",
] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = [
	"defmt",
	"icmp",
	"tcp",
	"udp",
	"raw",
	"dhcpv4",
	"medium-ethernet",
	"dns",
	"proto-ipv4",
	"proto-ipv6",
	"multicast",
] }
embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.5.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

# for assign resources example
assign-resources = { version = "0.5.0" }

# cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.7", features = [] }
cortex-m-rt = "0.7.5"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
smart-leds = "0.4.0"
heapless = "0.8"
usbd-hid = "0.8.1"

embedded-hal-async = "1.0"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.9.0", default-features = false }
embedded-sdmmc = "0.9.0"
lora-phy = "3.0.1"
p256 = { version = "0.13.2", default-features = false, features = [
	"ecdsa",
	"ecdsa-core",
] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
