[package]
name = "wio-l1"
version = "0.1.0"
edition = "2024"

[dependencies]
nrf52840-hal = "0.19.0"
cortex-m-rt = "0.7.3"
panic-semihosting = "0.6.0"
usb-device = "0.3.2"
usbd-serial = "0.2.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtic = { version = "2.2.0", features = ["cortex-m", "thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["nrf52840"] }
static_cell = "2.1.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
