[package]
name = "wio-l1"
version = "0.1.0"
edition = "2024"

[dependencies]
nrf52840-hal = "0.19.0"
cortex-m-rt = "0.7.3"
usb-device = "0.3.2"
usbd-serial = "0.2.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtic = { version = "2.2.0", features = ["cortex-m", "thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = [
    "nrf52840",
    "cortex-m-systick",
] }
static_cell = "2.1.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = "0.9.2"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
nalgebra = { version = "0.34.2", default-features = false }

# UI
buoyant = { version = "0.6.1" }
embedded-graphics = { version = "0.8.2", features = [
    "defmt",
    "nalgebra_support",
] }
# embedded-graphics-simulator = "0.8.0"
embedded-touch = "0.3.0"
# embedded-ttf = { version = "0.2.2", default-features = false }
# rusttype = "0.9.3"
# u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
# mipidsi = "0.10.0"
sh1106 = "0.5.0"

# [dependencies.qcp]
# path = "../qcp"

[profile.release]
# opt-level = 3
debug = true
