[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.19"
eg-seven-segment = "0.2.0"
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"
tinybmp = "0.6.0"
tinytga = "0.5.0"
qcp = { workspace = true }
buoyant = "0.5.3"
embedded-touch = "0.3.0"

[dev-dependencies]
embedded-graphics-simulator = "0.8.0"

[features]
default = ["rgb888"]
rgb888 = []

[[example]]
name = "native"
path = "examples/native.rs"
