[package]
name = "entangler-common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.19"
eg-seven-segment = "0.2.0"
tinybmp = "0.6.0"
tinytga = "0.5.0"
qcp = { workspace = true }
embedded-touch = "0.3.0"
slint = { version = "1.14.1", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

[build-dependencies]
slint-build = "1.14.1"
