[package]
name = "entangler-common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.19"
eg-seven-segment = "0.2.0"
tinybmp = "0.6.0"
tinytga = "0.5.0"
qcp = { workspace = true }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-touch = "0.3.0"
slint = { version = "1.14.1", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
    "backend-winit",
    "std",
] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-executor = "0.9.1"

log = "0.4.29"
defmt = { version = "1.0.1", optional = true }
opool = "0.2.0"

[build-dependencies]
slint-build = "1.14.1"

[features]
default = []
defmt = ["dep:defmt"]
