[package]
name = "entangler-simulation"
version = "0.1.0"
edition = "2021"
authors = ["Timothy Gibson <timmaxgibson@gmail.com>"]
readme = "README.md"
license = "MIT"
publish = false

[dependencies]
entangler-common = { path = "../entangler-common" }
log = "0.4"
heapless = { version = "0.9.2", default-features = false, features = ["defmt"] }
tinybmp = { version = "0.6" }
static_cell = { version = "2" }

slint = { version = "1.14.1", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    # "libm",
    "renderer-software",
    "backend-winit",
    "std",
] }

critical-section = { version = "1.2", features = ["std"] }
embassy-sync = { version = "0.7.2" }
embassy-executor = { version = "0.9.1", features = [
    "executor-thread",
    "arch-std",
] }
embassy-time = { version = "0.5.0", features = ["std"] }
embassy-futures = { version = "0.1.1" }

env_logger = { version = "0.11.8" }
object-pool = { version = "0.6.0" }
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.8.0"
defmt = { version = "1.0.1", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
