[package]
edition = "2024"
name = "entangler-waveshare-esp32s3"
# rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "entangler-waveshare-esp32s3"
path = "./src/bin/main.rs"

[dependencies]
# entangler-common ={ path = "../entangler-common" }

esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }

critical-section = "1.2.0"
static_cell = "2.1.1"

# drivers
axs5106l = "0.1.0"
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
